# ForgeFrame

./: .env.example  .gitignore  200  AGENTS.md  CODEX_INSTALL_AUDIT.md  HEARTBEAT.md  README.md  SOUL.md  TOOLS.md  tmp_profiles.json  tmp_runs.json
backend/: .env.example  README.md  pyproject.toml
backend/.forgeframe/: control_plane_state.json  harness_profiles.json  harness_runs.json  instances_state.json
backend/app/: main.py  product_taxonomy.py  public_surface.py  readiness.py  request_metadata.py  tenancy.py
backend/tests/: conftest.py  test_admin_harness_export_api.py  test_admin_logs_audit_history_api.py  test_admin_logs_audit_history_postgres_api.py  test_admin_logs_export.py  test_admin_password_rotation_gate.py  test_agents_admin_api.py  test_anthropic_tool_correlation.py  test_app_boot.py  test_approvals_admin_api.py  test_assistant_profiles_admin_api.py  test_authz_route_guards.py  test_control_plane_state_persistence.py  test_control_plane_state_upgrade.py  test_conversations_inbox_admin_api.py  test_execution_admin_api.py  test_execution_background_worker.py  test_execution_models.py  test_execution_operator_fabric.py  test_execution_queue_dispatch_api.py  test_execution_repository_schema.py  test_execution_transitions.py  test_external_openai_path.py  test_generic_harness_fidelity.py  test_governance_admin_idempotency.py  test_governance_modules.py  test_harness_openai_provider_presets.py  test_harness_phase11_storage.py  test_harness_phase12_lifecycle.py  test_harness_phase8.py  test_host_public_https_contract.py  test_ingress_admin_api.py  (+32 more)
(+888 files in other folders)
